tdf#106897: preset visited/unvisited character style in ListBox

Change-Id: I9bfa2b8a50340a6b09d8cc50e5313dc45a518472
Reviewed-on: https://gerrit.libreoffice.org/35973
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>